--- a/home.html
+++ b/home.html
@@ -117,7 +117,7 @@
         <h1>&nbsp; Latest episodes<br></h1>
       </div>
     </div>
-  <p class="text-right">SHOW ALL</p>
+  <h1 class="text-right">SHOW ALL</h1>
     <!-- Custom styles for this template -->
     <link href="album.css" rel="stylesheet">
 <main role="main">
