--- a/home.html
+++ b/home.html
@@ -115,9 +115,9 @@
 <div class="container">
     <div class="row">
         <h1>&nbsp; Latest episodes<br></h1>
+      <p class="text-right">Show all</p>
       </div>
     </div>
-  <h1 class="text-right">SHOW ALL</h1>
     <!-- Custom styles for this template -->
     <link href="album.css" rel="stylesheet">
 <main role="main">
