--- a/home.html
+++ b/home.html
@@ -114,10 +114,9 @@
 </div>
 <div class="container">
     <div class="row">
-        <h1>&nbsp; Latest episodes<br></h1>
+        <h1>&nbsp; Latest episodes<p class="text-right">Show all</p><br></h1>
       </div>
   </div>
-  <p class="text-right">Show all</p>
     <!-- Custom styles for this template -->
     <link href="album.css" rel="stylesheet">
 <main role="main">
