--- a/home.html
+++ b/home.html
@@ -114,7 +114,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <h1>&nbsp; Latest episodes<p class="text-right">Show all</p><br></h1>
+        <h1>&nbsp; Latest episodes<br></h1>
       </div>
   </div>
     <!-- Custom styles for this template -->
@@ -158,6 +158,7 @@
             </div>
           </div>
         </div></div></div></div></main></div>
+    <p class="text-right">Show all</p>
     <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
