--- a/home.html
+++ b/home.html
@@ -112,6 +112,7 @@
   </div>
 </div>
 </div>
+  <div class="album py-5 bg-light">
 <div class="container">
     <div class="row">
         <h1>&nbsp; Latest episodes<br></h1>
