--- a/home.html
+++ b/home.html
@@ -113,7 +113,7 @@
 </div>
 </div>
   <div class="album py-5 bg-light">
-    <hr style="width:85%" color="red">
+   <hr style="width:85%;height:3px" color="red"><br>
 <div class="container">
     <div class="row">
         <h1>&nbsp; Latest episodes<br></h1>
