--- a/home.html
+++ b/home.html
@@ -82,7 +82,15 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Miraculous Ladybug!</h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Catch All the news and episodes here!</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Catch All the news and episodes here!<br><br>SELECT YOUR LANGUAGE:
+                <a class="menu-item">
+		<select name="forma" onchange="location = this.value;">
+ <option>English</option>
+ <option value="/episodes.fr"> French</option>
+      <option value="/episodes.fr"> Italian</option>
+      <option value="/episodes.fr"> Arabic</option>
+</select>
+                  </a></p>
                 
             </div>
         </div>
@@ -93,14 +101,14 @@
         </a>
     </div>
 </section>
-<div class="alert alert-warning alert-dismissible fade show" role="alert">
+
+<div class="album py-5 bg-light">
+  <div class="alert alert-warning alert-dismissible fade show" role="alert">
   <strong>If any alerts ads appear please be sure to contact me!</strong>
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
-
-<div class="album py-5 bg-light">
 <div class="row no-gutters shadow-sm p-3 mb-5 bg-white rounded position-relative">
   <div class="col-md-6 mb-md-0 p-md-4">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRDQjXdSFcrA5pSwovg0nTf1BY6xGCoD9N2RpPV7MaYpd9pz_B8&usqp=CAU" class="w-100" alt="...">
