--- a/home.html
+++ b/home.html
@@ -120,6 +120,26 @@
   </div>
 </div>
 </div>
+	<div class="row no-gutters shadow-sm p-3 mb-5 bg-white rounded position-relative">
+  <div class="col-md-6 mb-md-0 p-md-4">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRDQjXdSFcrA5pSwovg0nTf1BY6xGCoD9N2RpPV7MaYpd9pz_B8&usqp=CAU" class="w-100" alt="...">
+  </div>
+  <div class="col-md-6 position-static p-4 pl-md-0">
+    <h5 class="mt-0">Latest News!</h5>
+    <p>
+	    <div class="container">
+  <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#demo">>Season 4 release date</button>
+  <div id="demo" class="collapse">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  </div>
+</div>
+	  </p>
+    <a href="#" class="stretched-link">Go somewhere</a>
+  </div>
+</div>
+</div>
   <div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="black"><br>
 <div class="container">
