--- a/home.html
+++ b/home.html
@@ -115,19 +115,8 @@
   </div>
   <div class="col-md-6 position-static p-4 pl-md-0">
     <h5 class="mt-0">Latest News!</h5>
-    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-    <a href="#" class="stretched-link">Go somewhere</a>
-  </div>
-</div>
-</div>
-	<div class="row no-gutters shadow-sm p-3 mb-5 bg-white rounded position-relative">
-  <div class="col-md-6 mb-md-0 p-md-4">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRDQjXdSFcrA5pSwovg0nTf1BY6xGCoD9N2RpPV7MaYpd9pz_B8&usqp=CAU" class="w-100" alt="...">
-  </div>
-  <div class="col-md-6 position-static p-4 pl-md-0">
-    <h5 class="mt-0">Latest News!</h5>
     <p>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .collapsible {
   background-color: #777;
@@ -155,26 +144,17 @@
 </head>
 <body>
 
-<h2>Collapsibles</h2>
-
-<p>A Collapsible:</p>
-<button type="button" class="collapsible">Open Collapsible</button>
+<button type="button" class="collapsible">Season 4 Release Date!</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>Season 4 is supposed to air this Fall but it could be delayed due to COVID-19</p>
 </div>
-
-<p>Collapsible Set:</p>
-<button type="button" class="collapsible">Open Section 1</button>
+<button type="button" class="collapsible">New Special Episode!</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>According to an interview with Thomas Astruc, a special episode of 52 mins is supposed to air before the premiere of Season 4.</p>
 </div>
-<button type="button" class="collapsible">Open Section 2</button>
+<button type="button" class="collapsible">The Miraculous Movie Release Date!</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button type="button" class="collapsible">Open Section 3</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>The Miraculous Movie will air at the end of 2021</p>
 </div>
 
 <script>
@@ -192,7 +172,7 @@ for (i = 0; i < coll.length; i++) {
     }
   });
 }
-</script>
+</script> 
 	  </p>
     <a href="#" class="stretched-link">Go somewhere</a>
   </div>
