--- a/home.html
+++ b/home.html
@@ -119,8 +119,8 @@
 	 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .collapsible {
-  background-color: #777;
-  color: white;
+  background-color: #FFFFFF;
+  color: black;
   cursor: pointer;
   padding: 18px;
   width: 100%;
@@ -131,14 +131,14 @@
 }
 
 .active, .collapsible:hover {
-  background-color: #555;
+  background-color: #FFFFFF;
 }
 
 .content {
   padding: 0 18px;
   display: none;
   overflow: hidden;
-  background-color: #f1f1f1;
+  background-color: #FFFFFF;
 }
 </style>
 </head>
