--- a/home.html
+++ b/home.html
@@ -120,7 +120,7 @@
 <style>
 .collapsible {
   background-color: #FFFFFF;
-  color: black;
+  color: red;
   cursor: pointer;
   padding: 18px;
   width: 100%;
@@ -148,13 +148,17 @@
 <div class="content">
   <p>Season 4 is supposed to air this Fall but it could be delayed due to COVID-19</p>
 </div>
+<button type="button" class="collapsible">Season 4 Release Date!</button>
+<div class="content">
+  <p><br>Season 4 is supposed to air this Fall but it could be delayed due to COVID-19</p>
+</div>
 <button type="button" class="collapsible">New Special Episode!</button>
 <div class="content">
-  <p>According to an interview with Thomas Astruc, a special episode of 52 mins is supposed to air before the premiere of Season 4.</p>
+  <p><br>According to an interview with Thomas Astruc, a special episode of 52 mins is supposed to air before the premiere of Season 4.</p>
 </div>
 <button type="button" class="collapsible">The Miraculous Movie Release Date!</button>
 <div class="content">
-  <p>The Miraculous Movie will air at the end of 2021</p>
+  <p><br>The Miraculous Movie will air at the end of 2021</p>
 </div>
 
 <script>
@@ -172,7 +176,7 @@ for (i = 0; i < coll.length; i++) {
     }
   });
 }
-</script> 
+</script>
 	  </p>
     <a href="#" class="stretched-link">Go somewhere</a>
   </div>
