--- a/home.html
+++ b/home.html
@@ -116,6 +116,7 @@
   <div class="col-md-6 position-static p-4 pl-md-0">
     <h5 class="mt-0">Latest News!</h5>
     <p>
+	    <head>
 	 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .collapsible {
@@ -174,6 +175,7 @@ for (i = 0; i < coll.length; i++) {
   });
 }
 </script>
+	    </body>
 	  </p>
     <a href="#" class="stretched-link">Go somewhere</a>
   </div>
