--- a/home.html
+++ b/home.html
@@ -182,7 +182,7 @@ for (i = 0; i < coll.length; i++) {
    <hr style="width:85%;height:3px" color="black"><br>
 <div class="container">
     <div class="row">
-        <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<div class="container"> 
   <button type="button" class="btn btn-primary btn-sm" href="/page80">Small</button>
 </div>
