--- a/home.html
+++ b/home.html
@@ -109,6 +109,46 @@
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
+	<head>
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+
+
+<div class="row">
+  <div class="column">
+    <img src="https://pbs.twimg.com/media/EZFOkclWoAEUgkY.jpg" alt="Snow" style="width:100%">
+    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+  </div>
+  <div class="column">
+    <img src="https://i.ytimg.com/vi/t-M08FTkvzo/maxresdefault.jpg" alt="Forest" style="width:100%">
+    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+  </div>
+  <div class="column">
+    <img src="https://i.ytimg.com/vi/1m3nSty_bG4/maxresdefault.jpg" alt="Mountains" style="width:100%">
+    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+  </div>
+</div>
+
+</body>
 <div class="row no-gutters shadow-sm p-3 mb-5 bg-white rounded position-relative">
   <div class="col-md-6 mb-md-0 p-md-4">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRDQjXdSFcrA5pSwovg0nTf1BY6xGCoD9N2RpPV7MaYpd9pz_B8&usqp=CAU" class="w-100" alt="...">
