--- a/home.html
+++ b/home.html
@@ -110,6 +110,69 @@
   </button>
 </div>
 	<head>
+  
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <style>
+  /* Make the image fully responsive */
+  .carousel-inner img {
+    width: 100%;
+    height: 100%;
+  }
+  </style>
+</head>
+<body>
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <head>
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+
+<div class="row">
+  <div class="column">
+    <img src="https://pbs.twimg.com/media/EZFOkclWoAEUgkY.jpg" alt="Snow" style="width:100%">
+    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+  </div>
+  <div class="column">
+    <img src="https://i.ytimg.com/vi/t-M08FTkvzo/maxresdefault.jpg" alt="Forest" style="width:100%">
+    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+  </div>
+  
+  <div class="column">
+    <img src="https://i.ytimg.com/vi/1m3nSty_bG4/maxresdefault.jpg" alt="Mountains" style="width:100%">
+    <figcaption class="figure-caption">A caption for the above image.</figcaption>
+  </div>
+</div>
+
+</body>
+    </div>
+    <div class="carousel-item">
+      <head>
 <style>
 * {
   box-sizing: border-box;
@@ -148,6 +211,18 @@
   </div>
 </div>
 
+</body>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 </body>
 <div class="row no-gutters shadow-sm p-3 mb-5 bg-white rounded position-relative">
   <div class="col-md-6 mb-md-0 p-md-4">
