--- a/watch.html
+++ b/watch.html
@@ -77,95 +77,36 @@
 </section>
 
 <section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXABxvuVwF" id="custom-html-2s" data-rv-view="332">
-  <h1><br><br><br><br>The Puppeteer</h1>
+  <h1><br><br><br><br>Episode Title</h1>
    <hr>
-  <p>Season 1 Episode 18</p>
+  <p>Season  Episode </p>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
   <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
  <script>
       document.addEventListener('DOMContentLoaded', () => {
           const player = Plyr.setup('.js-player');
       });
-<ul id="myUL">
-              <li><a href="?e=1|1&lang=eng">Season 1 Episode 1 Stormy Weather English Dub</a></li>
-              <li><a href="?e=1|2&lang=eng">Season 1 Episode 2 The Bubbler English Dub</a></li>
-              <li><a href="?e=1|3&lang=eng">Season 1 Episode 3 The Pharaoh English Dub</a></li>
-              <li><a href="?e=1|4&lang=eng">Season 1 Episode 4 Lady Wifi English Dub</a></li>
-              <li><a href="?e=1|5&lang=eng">Season 1 Episode 5 Timebreaker English Dub</a></li>
-              <li><a href="?e=1|6&lang=eng">Season 1 Episode 6 Mr Pigeon English Dub</a></li>
-              <li><a href="?e=1|7&lang=eng">Season 1 Episode 7 The Evillustrator English Dub</a></li>
-              <li><a href="?e=1|8&lang=eng">Season 1 Episode 8 Rogercop English Dub</a></li>
-              <li><a href="?e=1|9&lang=eng">Season 1 Episode 9 Copycat English Dub</a></li>
-              <li><a href="?e=1|10&lang=eng">Season 1 Episode 10 Dark Cupid English Dub</a></li>
-              <li><a href="?e=1|11&lang=eng">Season 1 Episode 11 Horrificator English Dub</a></li>
-              <li><a href="?e=1|12&lang=eng">Season 1 Episode 12 Darkblade English Dub</a></li>
-              <li><a href="?e=1|13&lang=eng">Season 1 Episode 13 The Mime English Dub</a></li>
-              <li><a href="?e=1|14&lang=eng">Season 1 Episode 14 Kung Food English Dub</a></li>
-              <li><a href="?e=1|15&lang=eng">Season 1 Episode 15 Gamer English Dub</a></li>
-              <li><a href="?e=1|16&lang=eng">Season 1 Episode 16 Animan English Dub</a></li>
-              <li><a href="?e=1|17&lang=eng">Season 1 Episode 17 Antibug English Dub</a></li>
-              <li><a href="?e=1|18&lang=eng">Season 1 Episode 18 Puppeteer English Dub</a></li>
-              <li><a href="?e=1|19&lang=eng">Season 1 Episode 19 Reflekta English Dub</a></li>
-              <li><a href="?e=1|20&lang=eng">Season 1 Episode 20 Pixelator English Dub</a></li>
-              <li><a href="?e=1|21&lang=eng">Season 1 Episode 21 Guitar Villain English Dub</a></li>
-              <li><a href="?e=1|22&lang=eng">Season 1 Episode 22 Princess Fragrance English Dub</a></li>
-              <li><a href="?e=1|23&lang=eng">Season 1 Episode 23 Simon Says English Dub</a></li>
-              <li><a href="?e=1|24&lang=eng">Season 1 Episode 24 Volpina English Dub</a></li>
-              <li><a href="?e=1|25&lang=eng">Season 1 Episode 25 Origins Part 1: Ladybug and Cat Noir English Dub</a></li>
-              <li><a href="?e=1|26&lang=eng">Season 1 Episode 26 Origins Part 2: Stoneheart English Dub</a></li>
-              <li><a href="?e=2|1&lang=eng">Season 2 Episode 1 The Collector English Dub</a></li>
-              <li><a href="?e=2|2&lang=eng">Season 2 Episode 2 Despair Bear English Dub</a></li>
-              <li><a href="?e=2|3&lang=eng">Season 2 Episode 3 Prime Queen English Dub</a></li>
-              <li><a href="?e=2|4&lang=eng">Season 2 Episode 4 Befana English Dub</a></li>
-              <li><a href="?e=2|5&lang=eng">Season 2 Episode 5 Riposte English Dub</a></li>
-              <li><a href="?e=2|6&lang=eng">Season 2 Episode 6 Robostus English Dub</a></li>
-              <li><a href="?e=2|7&lang=eng">Season 2 Episode 7 Gigantitan English Dub</a></li>
-              <li><a href="?e=2|8&lang=eng">Season 2 Episode 8 Dark Owl English Dub</a></li>
-              <li><a href="?e=2|9&lang=eng">Season 2 Episode 9 Glaciator English Dub</a></li>
-              <li><a href="?e=2|10&lang=eng">Season 2 Episode 10 Gorizilla English Dub</a></li>
-              <li><a href="?e=2|11&lang=eng">Season 2 Episode 11 Sapotis English Dub</a></li>
-              <li><a href="?e=2|12&lang=eng">Season 2 Episode 12 Captain Hardrock English Dub</a></li>
-              <li><a href="?e=2|13&lang=eng">Season 2 Episode 13 Zombizou English Dub</a></li>
-              <li><a href="?e=2|14&lang=eng">Season 2 Episode 14 Syren English Dub</a></li>
-              <li><a href="?e=2|15&lang=eng">Season 2 Episode 15 Frightningale English Dub</a></li>
-              <li><a href="?e=2|16&lang=eng">Season 2 Episode 16 Troublemaker English Dub</a></li>
-              <li><a href="?e=2|17&lang=eng">Season 2 Episode 17 Reverser English Dub</a></li>
-              <li><a href="?e=2|18&lang=eng">Season 2 Episode 18 Anansi English Dub</a></li>
-              <li><a href="?e=2|19&lang=eng">Season 2 Episode 19 Sandboy English Dub</a></li>
-              <li><a href="?e=2|20&lang=eng">Season 2 Episode 20 Style Queen English Dub</a></li>
-              <li><a href="?e=2|21&lang=eng">Season 2 Episode 21 Queen Wasp English Dub</a></li>
-              <li><a href="?e=2|22&lang=eng">Season 2 Episode 22 Malediktator English Dub</a></li>
-              <li><a href="?e=2|23&lang=eng">Season 2 Episode 23 Frozer English Dub</a></li>
-              <li><a href="?e=2|24&lang=eng">Season 2 Episode 24 Heroes Day Part 1: Catalyst English Dub</a></li>
-              <li><a href="?e=2|25&lang=eng">Season 2 Episode 25 Heroes Day Part 2: Mayura English Dub</a></li>
-              <li><a href="?e=2|26&lang=eng">Season 2 Episode 26 Christmas Special English Dub</a></li>
-              <li><a href="?e=3|1&lang=eng">Season 3 Episode 1 Chamaleon English Dub</a></li>
-              <li><a href="?e=3|2&lang=eng">Season 3 Episode 2 Animaestro English Dub</a></li>
-              <li><a href="?e=3|3&lang=eng">Season 3 Episode 3 Bakerix English Dub</a></li>
-              <li><a href="?e=3|4&lang=eng">Season 3 Episode 4 Backwarder English Dub</a></li>
-              <li><a href="?e=3|5&lang=eng">Season 3 Episode 5 Reflekdoll English Dub</a></li>
-              <li><a href="?e=3|6&lang=eng">Season 3 Episode 6 Weredad English Dub</a></li>
-              <li><a href="?e=3|7&lang=eng">Season 3 Episode 7 Silencer English Dub</a></li>
-              <li><a href="?e=3|8&lang=eng">Season 3 Episode 8 Onichan English Dub</a></li>
-              <li><a href="?e=3|9&lang=eng">Season 3 Episode 9 Miraculer English Dub</a></li>
-              <li><a href="?e=3|10&lang=eng">Season 3 Episode 10 Oblivio English Dub</a></li>
-              <li><a href="?e=3|11&lang=eng">Season 3 Episode 11 Desperada English Dub</a></li>
-              <li><a href="?e=3|12&lang=eng">Season 3 Episode 12 Chris Master English Dub</a></li>
-              <li><a href="?e=3|13&lang=eng">Season 3 Episode 13 Startrain English Dub</a></li>
-              <li><a href="?e=3|14&lang=eng">Season 3 Episode 14 Kwami Buster English Dub</a></li>
-              <li><a href="?e=3|15&lang=eng">Season 3 Episode 15 Feast English Dub</a></li>
-              <li><a href="?e=3|16&lang=eng">Season 3 Episode 16 Gamer 2.0 English Dub</a></li>
-              <li><a href="?e=3|17&lang=eng">Season 3 Episode 17 Stormy Weather 2 English Dub</a></li>
-              <li><a href="?e=3|18&lang=eng">Season 3 Episode 18 Ikari Gozen English Dub</a></li>
-              <li><a href="?e=3|19&lang=eng">Season 3 Episode 19 Timetagger English Dub</a></li>
-              <li><a href="?e=3|20&lang=eng">Season 3 Episode 20 Party Crasher English Dub</a></li>
-              <li><a href="?e=3|21&lang=eng">Season 3 Episode 21 Puppeteer 2 English Dub</a></li>
-              <li><a href="?e=3|22&lang=eng">Season 3 Episode 22 Cat Blanc English Dub</a></li>
-              <li><a href="?e=3|23&lang=eng">Season 3 Episode 23 Felix English Dub</a></li>
-              <li><a href="?e=3|24&lang=eng">Season 3 Episode 24 Ladybug English Dub</a></li>
-              <li><a href="?e=3|25&lang=eng">Season 3 Episode 25 Battle Of The Miraculous Part 1: Heart Hunter / Loveater English Dub</a></li>
-              <li><a href="?e=3|26&lang=eng">Season 3 Episode 26 Battle Of The Miraculous Part 2: Miracle Queen English Dub</a></li>
-            </ul>
+<link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
+  <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
+ <script>
+      document.addEventListener('DOMContentLoaded', () => {
+          const player = Plyr.setup('.js-player');
+      });
+  </script>
+  <video poster="https://seriex.to/assets/img/thumbnails/ep/1562457908-001-018.jpg" id="player" playsinline="" controls=""> <source src="https://vk.com/doc-192909419_543334265" type="video/mp4"> </video>
+   <!-- CUSTOM -->
+        
+<script src="player_data/polyfill.min.js"></script>
+<script src="player_data/plyr.min.js"></script>
+<script id="rendered-js">
+          // Change the second argument to your options:
+// https://github.com/sampotts/plyr/#options
+const player = new Plyr('video', { captions: { active: true } });
+
+// Expose player so it can be used from the console
+window.player = player;
+          //# sourceURL=pen.js
+        </script>
 <section class="mbr-section content8">
 
     <div class=".container-fluid">
