--- a/watch.html
+++ b/watch.html
@@ -93,7 +93,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://seriex.to/assets/img/thumbnails/ep/1562457908-001-018.jpg" id="player" playsinline="" controls=""> <source src="https://vk.com/doc-192909419_543334265" type="video/mp4"> </video>
+  <video poster="" id="player" playsinline="" controls=""> <source src="https://wave.video/embed/5ebee9a846e0fb002f916adb/5ebee9a846e0fb002f916ade.mp4" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
@@ -107,6 +107,15 @@ const player = new Plyr('video', { captions: { active: true } });
 window.player = player;
           //# sourceURL=pen.js
         </script>
+  <!-- JS -->
+<script>localStorage["lang"]="en,es,fr"
+localStorage["estitleenc"]="disabled";
+localStorage["activethumbs"]="true"
+localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png"
+localStorage["btntxt"]='en, Report Problem, Download episode, <p class="wnd-align-center"><font class="wsw-01"><strong>Follow us on Social Media such as <font class="wsw-24"><a href="https://www.instagram.com/ladybug.global/" rel="nofollow" target="_blank">Instagram</a></font>,&nbsp;<font class="wsw-17"><a href="https://youtube.com/c/LadybugGlobal" rel="nofollow" target="_blank">Youtube</a></font> and <font class="wsw-45"><a href="https://twitter.com/LadybugGlobal" rel="nofollow" target="_blank">Twitter</a></font>!</strong></font></p>, es, Reportar problema, Descargar episodio, <p class="wnd-align-center"><font class="wsw-01"><strong>Siguenos en redes sociales como <font class="wsw-24"><a href="https://www.instagram.com/ladybug.global/" rel="nofollow" target="_blank">Instagram</a></font>,&nbsp;<font class="wsw-17"><a href="https://youtube.com/c/LadybugGlobal" rel="nofollow" target="_blank">Youtube</a></font> y <font class="wsw-45"><a href="https://twitter.com/LadybugGlobal" rel="nofollow" target="_blank">Twitter</a></font>!</strong></font></p>, fr, Signaler un problème, Télécharger l\'épisode, <p class="wnd-align-center"><font class="wsw-01"><strong>Suivez-nous sur les réseaux sociaux comme <font class="wsw-24"><a href="https://www.instagram.com/ladybug.global/" rel="nofollow" target="_blank">Instagram</a></font>,&nbsp;<font class="wsw-17"><a href="https://youtube.com/c/LadybugGlobal" rel="nofollow" target="_blank">Youtube</a></font> et <font class="wsw-45"><a href="https://twitter.com/LadybugGlobal" rel="nofollow" target="_blank">Twitter</a></font>!</strong></font></p>'</script>
+<script src="https://cdn.jsdelivr.net/npm/mediaelement@4.2.16/build/mediaelement-and-player.min.js"></script>
+<script src="https://mediaelements.github.io/MediaElements/main.js"></script>
+<script class="adcode" type="text/javascript" src="//ofgogoatan.com/apu.php?zoneid=3250562" async data-cfasync="false"></script>
 <section class="mbr-section content8">
 
     <div class=".container-fluid">
