--- a/home.html
+++ b/home.html
@@ -177,7 +177,7 @@ for (i = 0; i < coll.length; i++) {
    <hr style="width:85%;height:3px" color="black"><br>
 <div class="container">
     <div class="row">
-        <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;
+        <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
 		<head>
 <style>
 /* unvisited link */
@@ -206,7 +206,6 @@ a:active {
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://itsladybug.cf/page80.html">SHOW ALL</a>
 
 </body>	  
-		<br></h1>
       </div>
   </div>
     <!-- Custom styles for this template -->
