--- a/home.html
+++ b/home.html
@@ -174,7 +174,7 @@ for (i = 0; i < coll.length; i++) {
 </div>
 </div>
   <div class="album py-5 bg-light">
-   <hr style="width:85%;height:3px" color="black"><br>
+   <hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
     <div class="row">
         <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
