--- a/home.html
+++ b/home.html
@@ -177,35 +177,7 @@ for (i = 0; i < coll.length; i++) {
    <hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
     <div class="row">
-        <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
-		<head>
-<style>
-/* unvisited link */
-a:link {
-  color: green;
-}
-
-/* visited link */
-a:visited {
-  color: grey;
-}
-
-/* mouse over link */
-a:hover {
-  color: grey;
-}
-
-/* selected link */
-a:active {
-  color: grey;
-} 
-</style>
-</head>
-<body>
-
- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://itsladybug.cf/page80.html">SHOW ALL</a>
-
-</body>	  
+        <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;&nbsp;<br></h1>
       </div>
   </div>
     <!-- Custom styles for this template -->
@@ -252,7 +224,7 @@ a:active {
 <style>
 /* unvisited link */
 a:link {
-  color: green;
+  color: grey;
 }
 
 /* visited link */
