--- a/home.html
+++ b/home.html
@@ -177,7 +177,7 @@ for (i = 0; i < coll.length; i++) {
    <hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
     <div class="row">
-        <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;&nbsp;<br></h1>
+        <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
       </div>
   </div>
     <!-- Custom styles for this template -->
