--- a/home.html
+++ b/home.html
@@ -120,7 +120,7 @@
     </div>
   </div>
 </div>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="card mb-3" style="max-width: 540px;">
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="card mb-3" style="max-width: 540px;">
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="https://seriex.to/assets/img/thumbnails/1562457908.jpg" class="card-img" alt="..." title width="200" height="250">
@@ -135,6 +135,20 @@
   </div>
 </div>
   </div>
+	<div class="row mb-4">
+  &nbsp;&nbsp;&nbsp;&nbsp;<div class="text-center">
+  <img src="https://pbs.twimg.com/media/EZFOkclWoAEUgkY.jpg" class="rounded" alt="..." title width="200" height="250">
+</div>
+  &nbsp;&nbsp;&nbsp;&nbsp;<div class="text-center">
+  <img src="https://i.ytimg.com/vi/t-M08FTkvzo/maxresdefault.jpg" class="rounded" alt="..." title width="200" height="250">
+</div>
+  &nbsp;&nbsp;&nbsp;&nbsp;<div class="text-center">
+  <img src="https://i.ytimg.com/vi/1m3nSty_bG4/maxresdefault.jpg" class="rounded" alt="..." title width="200" height="250">
+</div>
+  &nbsp;&nbsp;&nbsp;&nbsp;<div class="text-center">
+  <img src="https://i.ytimg.com/vi/WVLTu_WDlWE/maxresdefault.jpg" class="rounded" alt="..." title width="350" height="200">
+</div>
+</div>
 <div class="row no-gutters shadow-sm p-3 mb-5 bg-white rounded position-relative">
   <div class="col-md-6 mb-md-0 p-md-4">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRDQjXdSFcrA5pSwovg0nTf1BY6xGCoD9N2RpPV7MaYpd9pz_B8&usqp=CAU" class="w-100" alt="...">
