--- a/home.html
+++ b/home.html
@@ -103,7 +103,8 @@
 </section>
 
 <div class="album py-5 bg-light">
-	
+	<div class="row mb-4">
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <div class="card mb-3" style="max-width: 540px;">
   <div class="row no-gutters">
     <div class="col-md-4">
