--- a/home.html
+++ b/home.html
@@ -119,6 +119,7 @@
     </div>
   </div>
 </div>
+		<div class="row mb-2">
   <div class="card mb-3" style="max-width: 540px;">
   <div class="row no-gutters">
     <div class="col-md-4">
