--- a/watch.html
+++ b/watch.html
@@ -67,7 +67,7 @@
   <p class="epnumber">Loading :)</p>
    <!-- JS -->
 <script>
-  localStorage["lang"]="en,fr,es"
+  localStorage["lang"]="en,es,fr,"
   localStorage["estitleenc"]="disabled";
   localStorage["activethumbs"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
