--- a/watch.html
+++ b/watch.html
@@ -65,9 +65,8 @@
   <h1 class="eptitle"><br>Loading...</h1>
    <hr>
   <p class="epnumber">Loading :)</p>
-   <!-- JS -->
 <script>
-  localStorage["lang"]="en,es,fr,"
+  localStorage["myurls"]="en,es,fr"
   localStorage["estitleenc"]="disabled";
   localStorage["activethumbs"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
