--- a/watch.html
+++ b/watch.html
@@ -69,6 +69,7 @@
   localStorage["myurls"]="en,es,fr"
   localStorage["estitleenc"]="disabled";
   localStorage["activethumbs"]="true"
+  localStorage["download"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
 </script>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
