--- a/watch.html
+++ b/watch.html
@@ -66,10 +66,9 @@
    <hr>
   <p class="epnumber">Loading :)</p>
 <script>
-  localStorage["myurls"]="en,es,fr"
+  localStorage["lang"]="en,es,fr"
   localStorage["estitleenc"]="disabled";
   localStorage["activethumbs"]="true"
-  localStorage["download"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
 </script>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
