--- a/watch.html
+++ b/watch.html
@@ -67,7 +67,7 @@
   <p class="epnumber">Loading :)</p>
     <script>
   localStorage["myurls"]="en,fr,it"
-  localStorage["estitleenc"]="disabled";
+  localStorage["estitleenc"]="able";
   localStorage["activethumbs"]="true"
   localStorage["globalposter"]="https://files.miraculousladybug.cf/favicon.png";
 </script>
